--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/glimmermeeting?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=678678
+spring.jpa.hibernate.ddl-auto=update
