--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.79.11:3306/glimmermeeting?useUnicode=true&characterEncoding=utf8
-#spring.datasource.url=jdbc:mysql://10.96.2.22:3306/glimmermeeting?useUnicode=true&characterEncoding=utf8
+#spring.datasource.url=jdbc:mysql://192.168.79.11:3306/glimmermeeting?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://mysql.glimmermeeting.svc.cluster.local:3306/glimmermeeting?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=glimmer
 spring.datasource.password=glimmernb
 spring.jpa.hibernate.ddl-auto=update
